--- a/src/index.htm
+++ b/src/index.htm
@@ -8,6 +8,10 @@
 </head>
 <body>
 
+<a class="forkme" href="https://github.com/hbi99/cruise-ship" target="_new">
+	<img src="https://s3.amazonaws.com/github/ribbons/forkme_left_orange_ff7600.png" alt="Fork me on GitHub">
+</a>
+
 <h1>MSC Seaside</h1>
 
 <div class="viewport">
